modified:   assets/css/back-to-top.css 	modified:   assets/css/dark-mode.css 	modified:   assets/css/footer.css 	modified:   assets/js/back-to-top.js 	modified:   assets/js/mobile-touch.js 	modified:   assets/js/scripts.js 	modified:   footer.php 	modified:   inc/post-views.php 	modified:   inc/template-functions.php 	modified:   inc/template-tags.php 	modified:   template-parts/breaking-news-ticker.php 	modified:   template-parts/content.php

--- a/assets/css/back-to-top.css
+++ b/assets/css/back-to-top.css
@@ -17,7 +17,13 @@
     opacity: 0.8;
 }
 
-.back-to-top:hover {
+/* Show class for compatibility with multiple scripts */
+.back-to-top.show {
+    display: block;
+}
+
+.back-to-top:hover,
+.back-to-top.touch-active {
     opacity: 1;
     color: #fff;
     text-decoration: none;
