--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -70,7 +70,7 @@
 
 .post-thumbnail img {
     width: 100%;
-    height: 220px;
+    height: 180px;
     object-fit: cover;
     transition: transform 0.3s ease;
 }
@@ -101,7 +101,12 @@
     }
     
     .posts-list .post-thumbnail img {
-        height: 220px;
+        height: 160px;
+    }
+    
+    /* Grid layout mobile adjustments */
+    .post-thumbnail img {
+        height: 160px;
     }
 }
 
